--- a/calculadora_imc/style.css
+++ b/calculadora_imc/style.css
@@ -3,6 +3,8 @@ body {
     display: flex;
     justify-content: center;
     background-color: rgb(247, 247, 247);
+    margin: 0px;
+    height: 100vh;
 }
 
 #calculadora {
@@ -98,6 +100,10 @@ body {
 }
 
 @media (max-width: 750px) {
+    body {
+        height: 100%;
+    }
+
     #calculadora {
         height: 700px;
         width: 350px;
