--- a/calculadora_imc/style.css
+++ b/calculadora_imc/style.css
@@ -1,16 +1,18 @@
 
 body {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     background-color: rgb(247, 247, 247);
     margin: 0px;
-    height: 100vh;
+    min-height: 455px;
+    align-items: center;
 }
 
 #calculadora {
     box-shadow: 3px 3px 5px rgb(199, 199, 199);
     background-color: white;
-    margin-top: 75px;
+    margin-top: 20px;
     display: flex;
     max-width: 700px;
     height: 400px;
@@ -51,7 +53,23 @@ body {
     width: 330px;
     font-size: 30px;
     font-family: Arial;
+    border-radius: 4px;
+    border: 0px;
+    background-color: lightgrey;
+}
 
+#darkMode {
+    display: flex;
+    justify-content: end;
+    width: 100%;
+}
+
+#botao_darkMode {
+    height: 35px;
+    width: 120px;
+    border-radius: 5px;
+    border: none;
+    background-color: rgb(233, 233, 233);
 }
 
 #cabecaImc {
